Potentially fixed header nav spacing error

--- a/css/base.css
+++ b/css/base.css
@@ -41,7 +41,7 @@ p {
     font-family: 'Mr Bedfort', cursive;
     font-size: 20px;
     display: inline; 
-    margin: 10px -25px 10px 10px;
+    margin: 10px 0px 10px 10px;
         
 }
 
